fix: added isLoaded field to avoid desktop layout on mobile devices while isMobile is beaing loaded

--- a/styles/item-page.module.css
+++ b/styles/item-page.module.css
@@ -21,7 +21,3 @@
 .tr-c:nth-child(even) {
   background-color: var(--grey-75);
 }
-
-.photo-slide {
-  @apply w-full mx-auto relative bg-white border h-52 border-grey-100 lg:w-16 lg:h-16 lg:border-none;
-}
